--- a/style.css
+++ b/style.css
@@ -13,72 +13,76 @@
     background-color: burlywood;
     border-radius: 50%;
     position:relative;
-    top: 80px;
+    top: 60px;
     left: 65px;
 }
-.ear1{
-    grid-area:top1 ;
+
+/* for both ears */
+.ear{
     height: 90px;
     width: 90px;
     background-color: #824e34;
     border-radius: 50%;
+}
+
+/* for left ear */
+.ear1{
+    grid-area:top1 ;
+    
     position:relative;
     top: 335px;
     left: 280px;
 }
+
+/* for right ear */
 .ear2{
     grid-area:top2;
-    height: 90px;
-    width: 90px;
-    background-color: #824e34;
-    border-radius: 50%;
     position:relative;
     top: 245px;
     left: 450px;
 }
-.eye,.iear,.ear{
-    display: grid;
-    grid-template-areas: 'top1 top2';
-}
-.iear1{
-    grid-area:top1 ;
+
+/* for pink region in ears */
+.inner-ear{
     height: 65px;
     width: 65px;
     background-color: #f2aacb;
     border-radius: 50%;
+}
+
+.inner-ear1{    
     position:relative;
     top: 20px;
     left: 20%;
 }
 
-.iear2{
-    grid-area:top1 ;
-    height: 65px;
-    width: 65px;
-    background-color: #f2aacb;
-    border-radius: 50%;
+.inner-ear2{
     position:relative;
     top: 20%;
     left: 10%;
 }
-.eye1{
+/*---*/
+
+.eye{
+    display: grid;
+    grid-template-areas: 'top1 top2';
     grid-area:top1 ;
     height: 20px;
     width: 20px;
     background-color: whitesmoke;
     border-radius: 50%;
+}
+/* for left eye */
+.eye1{
     position:relative;
     top: 80px;
     left: 40px;
 }
+
+/* for right eye */
 .eye2{
-    grid-area:top1 ;
-    height: 20px;
-    width: 20px;
-    background-color: whitesmoke;
-    border-radius: 50%;
     position:relative;
-    top: 80px;
+    top: 58px;
     left: 145px;
 }
 .nose{
